[tool.poetry]
name = "smsboomer"
version = "0.1.0"
description = ""
authors = ["Shizou"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
aiohttp = "^3.7.3"
pyTelegramBotAPI = "^3.7.5"
pyfiglet = "^0.8.post1"
user-agent = "^0.1.9"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
